# django

./: .gitignore  .pdm-python  mypy.ini  pyproject.toml
app/: settings.py
common/: models.py
common/migrations/: 0001_initial.py  0002_library_identfier.py  0003_duser_region_component_componentregioninfo_and_more.py  0004_car_component_car.py
common/tests/: factories.py  test_setup.py  utils.py
