[project]
name = "django"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Josh", email = "jdpuglielli@gmail.com"},
]
dependencies = ["djangorestframework>=3.16.0", "django>=4.2.21"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
